--- a/add_person.html
+++ b/add_person.html
@@ -106,13 +106,16 @@
               <!--Male-->
               <div class="gender-values">
                 <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="checkbox" value="male">
-                  <label class="form-check-label" for="inlineCheckbox1">Male</label>
+                  <input class="form-check-input" type="radio" name="gender" value="male">
+                  <label class="form-check-label" for="male">
+                    Male
+                  </label>
                 </div>
-                <!--Female-->
                 <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="checkbox" value="female">
-                  <label class="form-check-label" for="inlineCheckbox2">Female</label>
+                  <input class="form-check-input" type="radio" name="gender" value="female">
+                  <label class="form-check-label" for="female">
+                    Female
+                  </label>
                 </div>
               </div>
             </div>
