--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="box_inner">
                 <div class="box">
                     <div class="box_top">
-                        <img src="./Images/icon_2_design.svg" width="94" alt="" class="box_icon">
+                        <img src="./Images/homeless_1.png" width="94" alt="" class="box_icon">
                         <h4>Long Term Homeless<span>.</span></h4>
                     </div>
                     <p>Found while rough sleeping during pandemic, some self-referrals.</p>
@@ -119,7 +119,7 @@
             <div class="box_inner">
                 <div class="box">
                     <div class="box_top">
-                        <img src="./Images/icon_2_design.svg" width="94" alt="" class="box_icon">
+                        <img src="./Images/homeless_2.png" width="94" alt="" class="box_icon">
                         <h4>Short Term Homeless<span>.</span></h4>
                     </div>
                     <p>Self-referrals when pandemic disrupted housing arragements.</p>
@@ -142,7 +142,7 @@
             <div class="box_inner">
                 <div class="box">
                     <div class="box_top">
-                        <img src="./Images/icon_2_design.svg" width="93" alt="" class="box_icon">
+                        <img src="./Images/homeless_3.png" width="93" alt="" class="box_icon">
                         <h4>Transnational Homeless<span>.</span></h4>
                     </div>
                     <p>Most were stopped at immigration checkpoint and directed to shelter after border closures.</p>
