add password hashing for signup and login

--- a/login.html
+++ b/login.html
@@ -27,6 +27,9 @@
   <!-- Axios -->
   <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
 
+  <!-- Password Hashing Script -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jsSHA/2.0.2/sha.js"></script>
+
 </head>
 
 <body>
