update to add person

--- a/add_person.html
+++ b/add_person.html
@@ -268,7 +268,7 @@
                       id: new_homeless_id,
                       long: lng,
                       lat: lat,
-                      notes: description
+                      notes: ""
                   }
                   axios.get(api_endpoint2, {
                     params: homeless_location
