remove notes section when empty

--- a/listing.html
+++ b/listing.html
@@ -249,7 +249,7 @@
           <!-- End Section for Listing Content -->
 
           <!-- Start of Notes section -->
-          <div class="notes-content">
+          <div class="notes-content" v-if="db_note_list.length != 0">
             <div class="row">
               <h2>Notes</h2>
             </div>
